<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPU</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="baudRate">Baud rate</string>
    <string name="baud_rate_str">Baud rate</string>  
    <string name="stop_bit">StopBits</string>  
    <string name="data_bit">DataBits</string>
    <string name="parity_str">Parity</string>
    <string name="flow">Flow</string>
  <!--   <string name="time_out_str">TimeOut</string>   -->
    <string name="config">Config</string>
    <string name="read_bytes">Read Data</string>
    <string name="write_bytes">Write Data</string>
    <string name="write">Write</string>
	<string name="read">Read+Send</string>
	<string name="stop">Stop</string>
	<string name="connect_1">NRB</string>
	<string name="connect_2">NCDP</string>
	<string name="connect_3">CMEE</string>
	<string name="connect_4">NSMI</string>
	<string name="connect_5">NNMI</string>
	<string name="connect_6">NUESTATS</string>
	<string name="connect_7">CGATT</string>
	<string name="connect_8">NMSTATUS</string>
	<string name="connect_9">NMGS</string>
    <string name="open">Open</string>
    <string name="clear">Clear</string>
    <string name="hint">Input</string>
	<string name="hint_1">Output</string>

	<string name="temperature_unit">℃</string>
	<string name="humidity_unit">%</string>

    <string-array name="baud_rate">        
		<item>300</item>        
		<item>600</item>        
		<item>1200</item>     
		<item>2400</item>   
		<item>4800</item>        
		<item>9600</item>        
		<item>19200</item>        
		<item>38400</item>        
		<item>57600</item>
		<item>115200</item>
		<item>230400</item>    
		<item>460800</item>
		<item>921600</item>
	</string-array>
	
	<string-array name="stop_bits">        
		<item>1</item>        
		<item>2</item>        
	</string-array>
		
	<string-array name="data_bits">   
	    <item>5</item>
	    <item>6</item>
		<item>7</item>        
		<item>8</item>        
	</string-array>
	
	<string-array name="parity">        
		<item>None</item>        
		<item>Odd</item>
		<item>Even</item>
		<item >Mark</item>
		<item >Space</item>
	</string-array>
	
	<string-array name="flow_control">        
		<item>None</item>        
		<item>CTS/RTS</item>
	</string-array>

	<string-array name="AT_command">
		<item>AT+NRB</item>
		<item>AT+NCDP=49.4.85.232,5683</item>
		<item>AT+CMEE=1</item>
		<item>AT+NSMI=1</item>
		<item>AT+NNMI=1</item>
		<item>AT+NUESTATS</item>
		<item>AT+CGATT?</item>
		<item>AT+NMSTATUS?</item>
		<item>AT+NMGS=5,2020373839</item>
	</string-array>

</resources>
